--- a/src/components/ui/changeTheme/ThemeToggle.module.scss
+++ b/src/components/ui/changeTheme/ThemeToggle.module.scss
@@ -56,7 +56,7 @@
   cursor: pointer;
 }
 
-.btn__indicator {
+.btnIndicator {
   /*border: 2px solid red;*/
   background-color: #fff;
   /* width: 7em;
@@ -70,7 +70,7 @@
   transition: transform 0.3s ease;
 }
 
-.btn__icon-container {
+.btnIconContainer {
   width: 100%;
   height: 100%;
 
